# scania_rpa

./: .gitignore  CHANGELOG.md  README.md  check_setup.py  debug_element.py  debug_menu_click.py  environment.yml  main.py  pyproject.toml  start_api.py  start_browser.py  start_service.py  test_api_client.py  test_rpa_service.py  ultimate_debug.py
api/: main.py  rpa_service.py
api/routers/: auth.py  items.py  material_location.py  mr.py  scraper.py  settings.py  sync.py  vendor.py  vendor_cache.py  (+1 more)
config/: .env.example  __init__.py  auth.py  auth_manager.py  browser.py  settings.py  settings_manager.py
docs/: 连接信息.txt
rpa/: __init__.py  browser.py  config.py  invusage_operations.py  keepalive.py  keepalive_worker.py  logger.py  maximo_actions.py  navigation.py  po_operations.py  po_vendor_scraper.py  utils.py  vendor_operations.py  workflows.py
scripts/: export_wos_to_json.md  export_wos_to_json.py  fetch_multiple_pos.py  import_materials.py  init_all_tables.py  resync_po_details.py  rpa_sync_maximo_to_db.md  rpa_sync_maximo_to_db.py  sync_all.py  wo_config.txt
src/: __init__.py  examples.py  main.py
tests/: analyze_item_data.py  check_db_table.py  check_material_table.py  discover_endpoints.py  discover_receipt_endpoints.py  explore_actions.py  explore_receipt_api.py  get_item_detail.py  get_item_master.py  get_page.py  get_purchase_order.py  parse_inbound_har.py  test_api_endpoints.py  test_auth_parser.py  test_db_connection.py  test_full.py  test_mxapipo.py  test_po_patch.py  test_po_wsmethod.py  test_receipt_endpoints.py  test_receipt_quick.py
(+53 files in other folders)
