[project]
name = "scannia-rpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "mysql-connector-python==9.1.0",
    "playwright>=1.49.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "PySocks>=1.7.1",
]
